# skillup

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: run-tests.yml
envs/: .env.template
src/: main.py
src/application/commands/: plan_create.py  plan_creation_complete.py  user_register_via_telegram.py
src/application/event_handlers/: plan_creation_complete.py  plan_request_submitted.py  user_registration.py
src/domain/events/: base_event.py  plan_creation_complete.py  plan_request_submitted.py  user_register.py
src/domain/exceptions/: default_exception.py  telegram_already_added.py  user_has_active_plan_request.py  user_has_in_process_plan.py  user_has_plan_draft.py
src/domain/models/: plan.py  plan_request.py  step.py  telegram_user.py  user.py
src/domain/ports/: event_bus.py  plan_generator.py  plan_repository.py  plan_request_repository.py  step_repository.py  telegram_user_repository.py  user_notifier.py  user_repository.py
src/infra/: celery_app.py  celery_start.py  logger.py
src/infra/background_tasks/: generate_plan.py
src/infra/config/: __init__.py  ai.py  database.py  settings.py  telegram.py
src/infra/db/: mapper.py
src/infra/di/: main.py
src/infra/event_bus/: dishka_handler_factory.py  exception.py  in_memory.py  redis.py
src/infra/exceptions/: active_plan_exists_error.py  event_mapper_exception.py  infra_exception.py
src/infra/mappers/: event_mapper.py
src/infra/notifiers/: telegram_notifier.py
src/infra/repositories/: exception.py  plan_repository.py  plan_request_repository.py  (+3 more)
(+30 files in other folders)
